# app_scoring

./: .gitignore  Procfile  app.py  app2.py  application_test_cleaned.csv  application_test_scaled.csv  cleaning.py  fonctions.py  frontend.py  introduction.txt  model.py  pyproject.toml  requirements.txt  scoring_model.pkl  shap_features.csv  streamlit.py
.github/workflows/: github-actions.yml  main.yml
app/: app2.py
templates/: index.html  streamlit.html
tests/: test_app.py
