[tool.poetry]
name = "app-scoring-v2"
version = "0.1.0"
description = ""
authors = ["VictorDedalus <lambertvictor24@gmail.com>"]
readme = "README.md"
packages = [{include = "app_scoring_v2"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"
flask = "^2.3.2"
requests = "^2.31.0"
mlflow = "^2.4.2"
shap = "^0.42.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
